Changes
=======

.. currentmodule:: objgraph

1.5.1 (unreleased)
------------------

- Avoid test failures in uncollectable-garbage.txt (fixes `LP#686731
  <http://launchpad.net/bugs/686731>`_).


1.5.0 (2010-12-05)
------------------

- Show frame objects as well (fixes `LP#361704
  <http://launchpad.net/bugs/361704>`_).

- New functions: :func:`show_growth`, :func:`show_chain`.

- :func:`find_backref_chain` returns ``[obj]`` instead of ``None`` when a chain
  could not be found.  This makes ``show_chain(find_backref_chain(...), ...)``
  not break.

- Show how many references were skipped from the output of
  :func:`show_refs`/:func:`show_backrefs` by specifying ``too_many``.

- Make :func:`show_refs` descend into modules.

- Do not highlight classes that define a ``__del__``, highlight only instances of
  those classes.

- Option to show reference counts in :func:`show_refs`/:func:`show_backrefs`.

- Add `Sphinx <http://pypi.python.org/pypi/Sphinx>`_ documentation and a PyPI
  long description.


1.4.0 (2010-11-03)
------------------

- Compatibility with Python 2.4 and 2.5 (``tempfile.NamedTemporaryFile`` has no
  ``delete`` argument).

- New function: :func:`most_common_types`.


1.3.1 (2010-07-17)
------------------

- Rebuild an sdist with no missing files (fixes `LP#606604
  <http://launchpad.net/bugs/606604>`_).

- Added MANIFEST.in and a Makefile to check that setup.py sdist generates
  source distributions with no files missing.


1.3 (2010-07-13)
----------------

- Highlight objects with a ``__del__`` method.

- Fixes `LP#483411 <http://launchpad.net/bugs/483411>`_: suggest always passing
  ``[obj]`` to :func:`show_refs`, :func:`show_backrefs`, since obj might be a
  list/tuple.

- Fixes `LP#514422 <http://launchpad.net/bugs/514422>`_: :func:`show_refs`,
  :func:`show_backrefs` don't create files in the current working directory any
  more.  Instead they accept a filename argument, which can be a .dot file or a